adapting colours to new typology

--- a/_/css/screen.css
+++ b/_/css/screen.css
@@ -8649,38 +8649,38 @@ path.arrow {
 
 /* line 194, ../sass/_trendkarte.scss */
 .downsd.downwohn {
-  background-color: #9dcaf6;
-  fill: #9dcaf6;
+  background-color: #143ead;
+  fill: #143ead;
 }
 
 /* line 198, ../sass/_trendkarte.scss */
 .downsd.midwohn {
-  background-color: #fde3b9;
-  fill: #fde3b9;
+  background-color: #143ead;
+  fill: #143ead;
 }
 
 /* line 202, ../sass/_trendkarte.scss */
 .downsd.upwohn {
-  background-color: #fa99a4;
-  fill: #fa99a4;
+  background-color: #143ead;
+  fill: #143ead;
 }
 
 /* line 206, ../sass/_trendkarte.scss */
 .midsd.downwohn {
-  background-color: #5884d1;
-  fill: #5884d1;
+  background-color: #143ead;
+  fill: #143ead;
 }
 
 /* line 210, ../sass/_trendkarte.scss */
 .midsd.midwohn {
-  background-color: #e0a882;
-  fill: #e0a882;
+  background-color: #c36d4b;
+  fill: #c36d4b;
 }
 
 /* line 214, ../sass/_trendkarte.scss */
 .midsd.upwohn {
-  background-color: #cc565f;
-  fill: #cc565f;
+  background-color: #c36d4b;
+  fill: #c36d4b;
 }
 
 /* line 218, ../sass/_trendkarte.scss */
