ignoring superemphasize when selecting and hovering, emphasize selected neighbourhoods appropriately

--- a/_/css/screen.css
+++ b/_/css/screen.css
@@ -8645,7 +8645,8 @@ path.arrow {
 
 /* line 166, ../sass/_trendkarte.scss */
 #matrix circle.emphasis {
-  stroke: black;
+  //stroke: black;
+  stroke-width: 3px;
 }
 
 /* line 170, ../sass/_trendkarte.scss */
@@ -8656,8 +8657,8 @@ path.arrow {
 
 /* line 175, ../sass/_trendkarte.scss */
 #matrix circle.superemphasis {
-  stroke: black;
-  stroke-width: 4px;
+  //stroke: black;
+  stroke-width: 3px;
 }
 
 /* line 194, ../sass/_trendkarte.scss */
